# classification-llm

./: .gitignore  Makefile  README.md  clean.py  get_metrics.py  main.py  mangler.py  parse.py  parsed.json  pyproject.toml  requirements.txt  running_test.py  study-dataset.py
dataset/: cleaned-dataset.csv
