[project]
name = "tcc"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "3.12.10"
dependencies = [
    "langchain-ollama (>=1.0.0,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-core (>=1.1.2,<2.0.0)",
    "langchain-chroma (>=1.0.0,<2.0.0)",
    "chromadb (>=1.3.5,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langchain-google-genai (>=4.0.0,<5.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "langchain (>=1.1.3,<2.0.0)",
    "langchain-text-splitters (>=1.0.0,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
